--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,11 +24,11 @@
     }
 
     .section-title {
-        @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] text-transparent bg-clip-text
+        @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-[#e43e00] to-[#FF4500] text-transparent bg-clip-text
     }
 
     .section-description {
-        @apply text-center text-[22px] leading-[30px] tracking-tight text-[#010D3E];
+        @apply text-center text-[22px] leading-[30px] tracking-tight text-[#e43e00];
     }
 
     .section-heading {
